kubernetes/apps/observability/node-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/enabled: "false"
    pangolin-operator/rules: '[{"action":"ACCEPT","match":"ip","value":"172.19.0.1"},{"action":"DROP","match":"cidr","value":"0.0.0.0/0"}]'
  name: prometheus-remote-write
spec:
  hostnames:
    - prometheus-rw.erwanleboucher.dev
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/write
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: observability
          port: 9090
